--- a/_posts/0000-01-09-liquid.md
+++ b/_posts/0000-01-09-liquid.md
@@ -2,7 +2,9 @@
 
 Liquid is an open-source template language created by [shopify](http://shopify.github.io/liquid/) and written in Ruby. It is the backbone of Shopify themes and is used to load dynamic content on storefronts.
 
+```js
 {% if page.title == "Awesome Post" %} This post is awesome! {% endif %}
+```
 
 You can see the list of available Jekyll variables [here](https://jekyllrb.com/docs/variables/)
 
@@ -10,7 +12,7 @@ You can see the list of available Jekyll variables [here](https://jekyllrb.com/d
 
 ## Example
 
-{% highlight %}
+```html
 <!-- Posts -->
 <ul class="post-list">
   {% for post in paginator.posts %}
@@ -28,4 +30,4 @@ You can see the list of available Jekyll variables [here](https://jekyllrb.com/d
     </li>
   {% endfor %}
 </ul>
-{% endhighlight %}
+```
