--- a/_posts/0000-01-10-yaml.md
+++ b/_posts/0000-01-10-yaml.md
@@ -6,7 +6,7 @@
 
 Oh wait.. {% fragment %}
 
-- YAML Ain't a Markup Language
+- YAML Ain't a Markup Language {% fragment %}
 
 ---
 
@@ -15,9 +15,9 @@ Oh wait.. {% fragment %}
 The front matter is where Jekyll starts to get really cool. Any file that contains a YAML front matter block will be processed by Jekyll as a special file.
 The front matter must be the first thing in the file and must take the form of valid YAML set between triple-dashed lines. Here is a basic example:
 
-{% highlight %}
+```js
 ---
 layout: post
 title: Blogging Like a Hacker
 ---
-{% endhighlight %}
+```
