--- a/_posts/0000-01-03-reasons.md
+++ b/_posts/0000-01-03-reasons.md
@@ -1,7 +1,7 @@
 ## Why use a Static Site Generator?
 
-* It’s simple {% fragment %}
-* It’s safe {% fragment %}
-* It’s fast {% fragment %}
-* It’s lightweight {% fragment %}
-* It’s extensible
+- It’s simple {% fragment %}
+- It’s safe {% fragment %}
+- It’s fast {% fragment %}
+- It’s lightweight {% fragment %}
+- It’s extensible {% fragment %}
