--- a/_posts/0000-01-08-markdown.md
+++ b/_posts/0000-01-08-markdown.md
@@ -2,8 +2,8 @@
 
 Markdown is a lightweight markup language with plain text formatting syntax designed so that it can be converted to HTML and many other formats using a tool by the same name.
 
-* In Jekyll you can mix HTML, MarkDown and Liquid Syntax
-* [StackEdit](https://stackedit.io/)
+- In Jekyll you can mix HTML, MarkDown and Liquid Syntax
+- [StackEdit](https://stackedit.io/)
 
 ---
 
