{% fragment %} gives error

--- a/_posts/0000-01-04-simple.md
+++ b/_posts/0000-01-04-simple.md
@@ -1,17 +1,17 @@
 ## Simple: development
 
-- You just need a server capable of serving static content, even dropbox! {% fragment %}
-- Simplified deployment pipeline (from copying files via FTP to git hooks) {% fragment %}
-- Themes structure is simple and developers can easily customize it {% fragment %}
-- Plugins can be written using Ruby {% fragment %}
-- Configuration based on YAML file(s)  {% fragment %}
+- You just need a server capable of serving static content, even dropbox!
+- Simplified deployment pipeline (from copying files via FTP to git hooks)
+- Themes structure is simple and developers can easily customize it
+- Plugins can be written using Ruby
+- Configuration based on YAML file(s)  
 
 --
 
 ## Simple: content
 
-- Every page (or post) lives in a separate file {% fragment %}
-- Write only content. No layout or anything else {% fragment %}
-- You can easily define page/post “meta” in the “Front Matter” {% fragment %}
-- You can install it on your computer and see changes in realtime {% fragment %}
-- Built-in pagination, permalinks, categories, etc… {% fragment %}
+- Every page (or post) lives in a separate file
+- Write only content. No layout or anything else
+- You can easily define page/post “meta” in the “Front Matter”
+- You can install it on your computer and see changes in realtime
+- Built-in pagination, permalinks, categories, etc…
