--- a/_posts/0000-01-10-yaml.md
+++ b/_posts/0000-01-10-yaml.md
@@ -2,11 +2,11 @@
 
 [YAML](https://yaml.com/) is one way that you can specify configuration in the pages and posts for your site. Setting things like a default layout, or customizing the title, or specifying a more precise date/time for the post can all be added to your page or post front matter
 
-- Yet Another Markup Language {% fragment %}
+- Yet Another Markup Language
 
-Oh wait.. {% fragment %}
+Oh wait..
 
-- YAML Ain't a Markup Language {% fragment %}
+- YAML Ain't a Markup Language
 
 ---
 
