--- a/_posts/0000-01-14-more.md
+++ b/_posts/0000-01-14-more.md
@@ -1,5 +1,5 @@
 ## More!!
 
-- [CloudFlare](https://www.cloudflare.com/) {% fragment %}
-- [Disquis](https://disqus.com/) {% fragment %}
-- [Gumroad](https://www.gumroad.com/)  {% fragment %}
+- [CloudFlare](https://www.cloudflare.com/)
+- [Disquis](https://disqus.com/) 
+- [Gumroad](https://www.gumroad.com/)  
